# ftuutils

./: README.md  conf.py  pydoc.bat  pyproject.toml  requirements.txt  setup.py  test.py
.github/workflows/: deploy.yaml  python-publish.yml
_build/doctrees/: environment.pickle  index.doctree
_build/html/: .buildinfo  genindex.html  index.html  objects.inv  search.html  searchindex.js
_build/html/_sources/: index.rst.txt
docs/api/: all-documents.html  classIndex.html  ftuutils.base.FTUDelaunayGraph.html  ftuutils.base.FTUGraph.html  ftuutils.base.html  ftuutils.codegenerationutils.html  ftuutils.compositionutils.Composer.html  ftuutils.compositionutils.SymbolicPHS.html  ftuutils.compositionutils.html  ftuutils.graphutils.Lattice2D.html  ftuutils.graphutils.html  ftuutils.latexgenerationutils.html  ftuutils.phsutils.html  ftuutils.runsimulations.ExperimentRunner.html  ftuutils.runsimulations.html  ftuutils.simulationutils.ExtractFTUDefinition.html  ftuutils.simulationutils.Refactor.html  ftuutils.simulationutils.SimulationExperiment.html  ftuutils.simulationutils.html  ftuutils.sympyutils.html  fullsearchindex.json  index.html  moduleIndex.html  nameIndex.html  objects.inv  searchindex.json  undoccedSummary.html
examples/: fhncontroltest.ipynb  morworkflow.ipynb
examples/data/: positions.npy
src/ftuutils/: base.py  cellmlutils.py  codegenerationutils.py  compositionutils.py  graphutils.py  jsutils.py  latexgenerationutils.py  phsutils.py  simulationutils.py  sympyutils.py  topologyeditor.py
src/ftuutils.egg-info/: PKG-INFO  SOURCES.txt
tests/: cellmltest.py  fhncontroltest.ipynb  fhncontroltest.py  ftuworkflow.ipynb  ftuworkflow.py  ftuworkflowcodegen.ipynb  ftuworkflowsimplevessel.ipynb  morworkflow.py
tests/data/Temp/FTUTest/: FTUStepper.py  FTUStepper_test.py  experimentdesign.json  operators.npy  runsimulations.py
tests/data/Temp/FTUTest/modelzoo/: Hamlet4BN11.py  Hamlet4BN17.py  Hamlet4BN4.py  Hamlet4BN5.py  pysr_ham_map.json
tests/data/Temp/FTUTest/pysrcodes/: FindExpressionFor_PHS_APN_Hamiltonian.py  (+5 more)
units/: investigate.cpp
(+6 files in other folders)
