[build-system]
requires = ["setuptools>=61.0", "setuptools_scm>=8.0"]
build-backend = "setuptools.build_meta"
[project]
name = "ftuutils"
dynamic = ["version"]
keywords = ["FTU", "Tissue", "Cells", "Port-Hamiltonian", "Bond Graphs", "12 Labours"]
readme = "README.md"
license = {file = "LICENSE"}
authors = [
  { name="Jagir R. Hussan", email="r.jagir@auckland.ac.nz" },
]
description = "Utilities to create FTU graph templates"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
[tool.setuptools_scm]
