[build-system]
requires = ["setuptools>=61.0", "setuptools_scm>=8.0", "pybind11"]
build-backend = "setuptools.build_meta"
[tool.setuptools-git-versioning]
enabled = true
[project]
name = "ftuutils"
dynamic = ["version"]
keywords = ["FTU", "Tissue", "Cells", "Port-Hamiltonian", "Bond Graphs", "12 Labours"]
readme = "README.md"
license = {file = "LICENSE"}
authors = [
  { name="Jagir R. Hussan", email="r.jagir@auckland.ac.nz" },
]
description = "Utilities to create FTU graph templates"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
"cloudpickle>=3.1.0",
"libcellml==0.5.0",
"matplotlib==3.7.1",
"networkx==3.1",
"numpy==2.1.2",
"scipy==1.14.1",
"sympy==1.11.1",
"tqdm>=4.65.0",
"antlr4-python3-runtime==4.10"
]
[tool.setuptools_scm]
